--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon -r dotenv/config ./bin/www"
   },
   "dependencies": {
+    "@line/bot-sdk": "^7.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
