--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.15",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
